--- a/graphserver-assistant-ui/package.json
+++ b/graphserver-assistant-ui/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.10",
-    "@assistant-ui/react": "^0.9.6",
+    "@assistant-ui/react": "^0.10.24",
     "@assistant-ui/react-ai-sdk": "^0.9.1",
-    "@assistant-ui/react-langgraph": "^0.5.8",
+    "@assistant-ui/react-langgraph": "^0.5.7",
     "@assistant-ui/react-markdown": "^0.9.1",
-    "@assistant-ui/react-ui": "^0.1.8",
-    "@langchain/langgraph-sdk": "^0.0.90",
+    "@langchain/langgraph-sdk": "^0.0.84",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.0",
     "ai": "^4.3.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "react": "^19.0.0",
